--- a/front/css/style.css
+++ b/front/css/style.css
@@ -52,6 +52,20 @@ header {
   height: 200px;
 }
 
+#formBox {
+  width: 80%;
+  margin: 10px auto 10px auto;
+  padding: 20px;
+  border-radius: 20px;
+  background-color: rgba(97, 11, 11, 0.2);
+}
+
+label {
+  display: inline-block;
+  margin: 10px;
+  width: 75px;
+}
+
 #article__container {
   display: flex;
   justify-content: space-evenly;
@@ -192,6 +206,35 @@ header {
 
 .productQuantity {
   width: 25%;
+}
+
+.emptyCartText {
+  display: flex;
+  align-items: center;
+  font-size: 1.5em;
+}
+
+.buttonToIndex {
+  height: 3em;
+  border-radius: 20px;
+  font-size: 1em;
+  padding: 15px;
+  background-color: #e4490d;
+  color: white;
+  box-shadow: 4px 4px 4px rgba(97, 11, 11, 0.2);
+}
+
+.indexLink {
+  margin-left: 50px;
+}
+
+#totalPrice {
+  background-color: #def0de;
+  border-radius: 20px;
+  font-size: 1.2em;
+  padding: 20px;
+  margin: 10px auto 10px auto;
+  width: 80%;
 }
 
 .furnitureButton {
