--- a/front/sass/layout/generals.scss
+++ b/front/sass/layout/generals.scss
@@ -1,4 +1,17 @@
 @import "../utils/mixins.scss";
+@import "../utils/variables.scss";
+#formBox{
+    width: 80%;
+    margin: 10px auto 10px auto;
+    padding: 20px;
+    border-radius: 20px;
+    background-color: $mainColor;
+}
+label{
+    display: inline-block;
+    margin: 10px;
+    width: 75px;
+}
 #article__container{
     @include FlexSpaceEvenly;
     flex-wrap: wrap;
@@ -75,4 +88,29 @@
 }
 .productQuantity{
     width:25%
+}
+.emptyCartText{
+    display: flex;
+    align-items: center;
+    font-size: 1.5em;
+}
+.buttonToIndex{
+    height: 3em;
+    border-radius: 20px;
+    font-size: 1em;
+    padding: 15px;
+    background-color: rgb(228, 73, 13);
+    color: white;
+    box-shadow: 4px 4px 4px rgba($color: #610b0b, $alpha: 0.2);
+}
+.indexLink{
+    margin-left: 50px;
+}
+#totalPrice{
+    background-color: rgb(222, 240, 222);
+    border-radius: 20px;
+    font-size: 1.2em;
+    padding: 20px;
+    margin : 10px auto 10px auto;
+    width: 80%;
 }
