--- a/front/css/style.css
+++ b/front/css/style.css
@@ -48,8 +48,38 @@ table {
   border-spacing: 0;
 }
 
+.headerPictureBox {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+
+.headerPicture {
+  object-fit: cover;
+  width: 100%;
+  border-radius: 0 0 50px 50px;
+}
+@media screen and (min-width: 700px) {
+  .headerPicture {
+    width: 75%;
+    border-radius: 50px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .headerPicture {
+    width: 50%;
+  }
+}
+
 header {
-  height: 200px;
+  margin-bottom: 25px;
+}
+
+.indexTitle {
+  margin-top: 30px;
+  font-size: 2em;
+  font-weight: bold;
+  text-align: center;
 }
 
 #formBox {
@@ -100,10 +130,16 @@ label {
   align-items: center;
   margin: 25px;
   width: 400px;
-  height: 350px;
+  height: 400px;
   border: solid gray;
   border-radius: 20px;
   box-shadow: 10px 5px 5px gray;
+}
+@media screen and (max-width: 700px) {
+  .itemBox-0 {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .itemBox-1 {
@@ -112,10 +148,16 @@ label {
   align-items: center;
   margin: 25px;
   width: 400px;
-  height: 350px;
+  height: 400px;
   border: solid gray;
   border-radius: 20px;
   box-shadow: 10px 5px 5px gray;
+}
+@media screen and (max-width: 700px) {
+  .itemBox-1 {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .itemBox-2 {
@@ -124,10 +166,16 @@ label {
   align-items: center;
   margin: 25px;
   width: 400px;
-  height: 350px;
+  height: 400px;
   border: solid gray;
   border-radius: 20px;
   box-shadow: 10px 5px 5px gray;
+}
+@media screen and (max-width: 700px) {
+  .itemBox-2 {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .itemBox-3 {
@@ -136,10 +184,16 @@ label {
   align-items: center;
   margin: 25px;
   width: 400px;
-  height: 350px;
+  height: 400px;
   border: solid gray;
   border-radius: 20px;
   box-shadow: 10px 5px 5px gray;
+}
+@media screen and (max-width: 700px) {
+  .itemBox-3 {
+    width: 100%;
+    height: auto;
+  }
 }
 
 .itemBox-4 {
@@ -148,27 +202,50 @@ label {
   align-items: center;
   margin: 25px;
   width: 400px;
-  height: 350px;
+  height: 400px;
   border: solid gray;
   border-radius: 20px;
   box-shadow: 10px 5px 5px gray;
 }
+@media screen and (max-width: 700px) {
+  .itemBox-4 {
+    width: 100%;
+    height: auto;
+  }
+}
 
 .title {
-  font-size: 2em;
+  background-color: #f5e9e9;
+  font-weight: bold;
+  width: 93%;
+  font-size: 1.7em;
+  border-radius: 0 0 30px 30px;
+  box-shadow: grey 2px 2px 2px 2px;
+  margin-bottom: 10px;
   text-align: center;
 }
 
 .description {
-  padding: 5px;
+  background-color: #f5e9e9;
+  font-size: 1.1em;
+  position: relative;
+  bottom: 5px;
+  width: 85%;
+  border-radius: 0 0 15px 15px;
+  box-shadow: grey 2px 2px 2px 2px;
+  padding: 10px;
+  z-index: -1;
 }
 
 .price {
+  font-weight: bold;
   padding: 5px;
 }
 
 .productlink {
+  display: block;
   width: 100%;
+  height: 100%;
   text-decoration: none;
   color: black;
 }
@@ -214,20 +291,6 @@ label {
   font-size: 1.5em;
 }
 
-.buttonToIndex {
-  height: 3em;
-  border-radius: 20px;
-  font-size: 1em;
-  padding: 15px;
-  background-color: #e4490d;
-  color: white;
-  box-shadow: 4px 4px 4px rgba(97, 11, 11, 0.2);
-}
-
-.indexLink {
-  margin-left: 50px;
-}
-
 #totalPrice {
   background-color: #def0de;
   border-radius: 20px;
@@ -239,9 +302,158 @@ label {
 
 .furnitureButton {
   width: 50%;
-  padding: 5px;
-  border-radius: 15px;
+  padding: 2px;
+  border-radius: 12px;
   font-size: 1em;
+  background-color: #f5e9e9;
+}
+.furnitureButton :hover {
+  font-weight: bold;
+  font-size: 0.9em;
+}
+@media screen and (max-width: 700px) {
+  .furnitureButton {
+    position: relative;
+    top: 16px;
+  }
+}
+
+#addFurnitureButton {
+  background-color: #f5e9e9;
+  font-size: 1.2em;
+  width: 80%;
+  border-radius: 25px;
+  box-shadow: grey 2px 2px 2px 2px;
+  padding: 15px;
+}
+#addFurnitureButton :hover {
+  font-weight: bold;
+}
+@media screen and (min-width: 700px) {
+  #addFurnitureButton {
+    width: 50%;
+  }
+}
+
+.validation {
+  background-color: red;
+  padding: 10px;
+  color: white;
+  font-size: 1.2em;
+  border-radius: 15px;
+}
+
+#clearStorageToIndex {
+  font-size: 0.9em;
+  border-radius: 15px;
+  padding: 15px;
+  margin-top: 50px;
+}
+
+#sendingForm {
+  width: 100px;
+  margin-top: 15px;
+  padding: 10px;
+  border-radius: 15px;
+  background-color: #7dcc2e;
+  color: white;
+}
+
+.buttonToIndex {
+  border-radius: 20px;
+  font-size: 1em;
+  padding: 15px;
+  margin-left: 25px;
+  background-color: #e4490d;
+  color: white;
+  box-shadow: 4px 4px 4px rgba(97, 11, 11, 0.2);
+}
+
+.itemBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 25px;
+  border: solid gray;
+  border-radius: 20px;
+  box-shadow: 10px 5px 5px gray;
+}
+@media screen and (min-width: 800px) {
+  .itemBox {
+    width: 60%;
+    height: auto;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .itemBox {
+    width: 50%;
+    height: auto;
+  }
+}
+
+.optionsBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 95%;
+  text-align: left;
+  margin-bottom: 15px;
+}
+
+.quantityForm {
+  margin-bottom: 15px;
+}
+
+.productsMain {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.customerThanks {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+#orderConfirmation {
+  width: 80%;
+  padding: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  border: solid;
+  border-radius: 25px;
+  background-color: #eff1eb;
+}
+#orderConfirmation p {
+  font-size: 1.3em;
+}
+
+.idOrder {
+  font-weight: bold;
+}
+
+.footerPictureBox {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+  width: 100%;
+}
+
+.footerPicture {
+  object-fit: cover;
+  width: 100%;
+  border-radius: 50px 50px 0 0;
+}
+@media screen and (min-width: 700px) {
+  .footerPicture {
+    width: 75%;
+    border-radius: 50px;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .footerPicture {
+    width: 50%;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
