--- a/front/sass/components/button.scss
+++ b/front/sass/components/button.scss
@@ -1,6 +1,59 @@
 .furnitureButton{
     width: 50%;
-    padding: 5px;
-    border-radius: 15px;
+    padding: 2px;
+    border-radius: 12px;
     font-size: 1em;
+    background-color: rgb(245, 233, 233);
+    :hover{
+        font-weight : bold;
+        font-size: 0.9em;
+    }
+    @media screen and (max-width: 700px){
+        position: relative;
+        top: 16px;
+    }
+}
+#addFurnitureButton{
+    background-color: rgb(245, 233, 233);
+    font-size: 1.2em;
+    width: 80%;
+    border-radius: 25px;
+    box-shadow: grey 2px 2px 2px 2px;
+    padding: 15px;
+    :hover{
+        font-weight: bold;
+    }
+    @media screen and (min-width: 700px){
+        width: 50%;
+    }
+}
+.validation{
+    background-color: red;
+    padding: 10px;
+    color: white;
+    font-size: 1.2em;
+    border-radius: 15px;
+}
+#clearStorageToIndex{
+    font-size: 0.9em;
+    border-radius: 15px;
+    padding: 15px;
+    margin-top : 50px;
+}
+#sendingForm{
+    width: 100px;
+    margin-top: 15px;
+    padding: 10px;
+    border-radius: 15px;
+    background-color: rgb(125, 204, 46);
+    color: white;
+}
+.buttonToIndex{
+    border-radius: 20px;
+    font-size: 1em;
+    padding: 15px;
+    margin-left: 25px;
+    background-color: rgb(228, 73, 13);
+    color: white;
+    box-shadow: 4px 4px 4px rgba($color: #610b0b, $alpha: 0.2);
 }
