--- a/front/sass/layout/generals.scss
+++ b/front/sass/layout/generals.scss
@@ -1,5 +1,14 @@
 @import "../utils/mixins.scss";
 @import "../utils/variables.scss";
+header{
+    margin-bottom: 25px;
+}
+.indexTitle{
+    margin-top: 30px;;
+    font-size: 2em;
+    font-weight: bold;
+    text-align: center;
+}
 #formBox{
     width: 80%;
     margin: 10px auto 10px auto;
@@ -39,24 +48,45 @@ label{
         align-items: center;
         @include cardMargin;
         width: 400px;
-        height: 350px;
+        height: 400px;
         border: solid gray;
         border-radius: 20px;
         box-shadow: 10px 5px 5px gray;
+        @media screen and (max-width: 700px){
+            width: 100%;
+            height: auto;
+        }
     }
 }
 .title{
-    font-size: 2em;
+    background-color: rgb(245, 233, 233);
+    font-weight: bold;
+    width: 93%;
+    font-size: 1.7em;
+    border-radius: 0 0 30px 30px;
+    box-shadow: grey 2px 2px 2px 2px;
+    margin-bottom: 10px;
     text-align: center;
 }
 .description{
-    padding: 5px;
+    background-color: rgb(245, 233, 233);
+    font-size: 1.1em;
+    position: relative;
+    bottom: 5px;
+    width: 85%;
+    border-radius: 0 0 15px 15px;
+    box-shadow: grey 2px 2px 2px 2px;
+    padding: 10px;
+    z-index: -1;
 }
 .price{
+    font-weight: bold;
     padding: 5px;
 }
 .productlink{
+    display: block;
     width: 100%;
+    height: 100%;
     text-decoration: none;
     color: black;
 }
@@ -93,18 +123,6 @@ label{
     display: flex;
     align-items: center;
     font-size: 1.5em;
-}
-.buttonToIndex{
-    height: 3em;
-    border-radius: 20px;
-    font-size: 1em;
-    padding: 15px;
-    background-color: rgb(228, 73, 13);
-    color: white;
-    box-shadow: 4px 4px 4px rgba($color: #610b0b, $alpha: 0.2);
-}
-.indexLink{
-    margin-left: 50px;
 }
 #totalPrice{
     background-color: rgb(222, 240, 222);
