--- a/front/sass/main.scss
+++ b/front/sass/main.scss
@@ -2,3 +2,6 @@
 @import "./layout/header.scss";
 @import "./layout/generals.scss";
 @import "./components/button.scss";
+@import "./pages/products.scss";
+@import "./pages/confirmation.scss";
+@import "./layout/footer.scss"
