--- a/front/css/style.css
+++ b/front/css/style.css
@@ -300,19 +300,19 @@ label {
   width: 80%;
 }
 
-.furnitureButton {
+#furnitureButton {
   width: 50%;
   padding: 2px;
   border-radius: 12px;
   font-size: 1em;
   background-color: #f5e9e9;
 }
-.furnitureButton :hover {
+#furnitureButton :hover {
   font-weight: bold;
   font-size: 0.9em;
 }
 @media screen and (max-width: 700px) {
-  .furnitureButton {
+  #furnitureButton {
     position: relative;
     top: 16px;
   }
